# mc4kidz

./: .clang-format  .gitignore  CMakeLists.txt  README.md
mc4kidz/: CMakeLists.txt  array2d.h  colors.h  drawable.h  histogram.cpp  histogram.h  info_pane.cpp  info_pane.h  line_plot.cpp  line_plot.h  main.cpp  materials.cpp  materials.h  mc4kidz.cpp  mc4kidz.h  mesh.cpp  mesh.h  particle.cpp  particle.h  pie_chart.cpp  pie_chart.h  pin_types.h  playbook.cpp  playbook.h  shapes.cpp  shapes.h  simple_structs.h  state.cpp  state.h  view.h
mc4kidz/tests/: CMakeLists.txt  psc_demo.txt  test_mesh.cpp  test_playbook.txt
